--- a/refs.bib
+++ b/refs.bib
@@ -15,6 +15,23 @@
 	}
 }
 
+@inproceedings{abadi2016tensorflow,
+	title={$\{$TensorFlow$\}$: A System for $\{$Large-Scale$\}$ Machine Learning},
+	author={Abadi, Mart{\'\i}n and Barham, Paul and Chen, Jianmin and Chen, Zhifeng and Davis, Andy and Dean, Jeffrey and Devin, Matthieu and Ghemawat, Sanjay and Irving, Geoffrey and Isard, Michael and others},
+	booktitle={12th USENIX symposium on operating systems design and implementation (OSDI 16)},
+	pages={265--283},
+	year={2016}
+}
+
+@article{vanrossum1995python,
+	title={Python reference manual},
+	author={van Rossum, Guido},
+	journal={Department of Computer Science [CS]},
+	number={R 9525},
+	year={1995},
+	publisher={CWI}
+}
+
 @INPROCEEDINGS{shor,
 	author={Shor, P.W.},
 	booktitle={Proceedings 35th Annual Symposium on Foundations of Computer Science}, 
