--- a/main.tex
+++ b/main.tex
@@ -59,7 +59,7 @@ textfont=it]{caption}
 
 \definecolorset{rgb}{}{}{darkred,0.8,0,0;darkgreen,0,0.5,0;darkblue,0,0,0.5}
 
-%\doublespacing
+\doublespacing
 
 \SetKwComment{Comment}{/* }{ */}
 %\RestyleAlgo{ruled}
@@ -173,12 +173,12 @@ d_{F}
 
 
 
-\author{Andrew J.~Holbrook}
+%\author{Andrew J.~Holbrook}
 
 
-\affil{UCLA Biostatistics}
+%\affil{UCLA Biostatistics}
 
-
+\author{}
 
 
 
@@ -370,6 +370,9 @@ In the next section, we review established quantum algorithms that leverage such
 	\caption{Curves depict the probability that Grover's quantum search algorithm returns a solution as a function of the number of oracle evaluations. For the ranges depicted, the number of iterations required and the number of solutions inversely relate, but increasing the number of iterations past \emph{R} (Equation \ref{eq:R}) can backfire and lead to extremely small probabilities of success.  }\label{fig:grov}
 \end{figure}
 
+
+
+
 Given a set of $N$ items and a function $f:\{0,1,\dots,N-1\}\rightarrow \{0,1\}$ that evaluates to $1$ for a single element, \citet{grover1996fast} develops an algorithm that uses quantum parallelism to score quadratic speedups over its classical counterparts. After only $\mathcal{O}(\sqrt{N})$ evaluations of $f(\cdot)$, Grover's algorithm returns the $x\in \{0,1,\dots,N-1\}$ satisfying $f(x) =1$ with high probability.  Compare this to $\order{N}$ requirement for the randomized classical algorithm that must evaluate $f(\cdot)$ over at least $N/2$ items to obtain the same probability of detecting $x$.  The algorithm takes the state $\ket{0}^{\otimes N}\ket{1}$ as input and applies Hadamard gates to each of the individual $N+1$ input qubits.  The resulting state is 
 \begin{align*}
 \ket{h}\ket{-}= \left(\frac{1}{\sqrt{N}} \sum_{x=0}^{N-1} \ket{x} \right)  \frac{1}{\sqrt{2}}\left(\ket{0} -\ket{1}\right) =  \frac{1}{\sqrt{N}} \sum_{x=0}^{N-1} \ket{x} \ket{-} \, .
@@ -399,6 +402,14 @@ The scientist who measures the state at this moment would obtain the desired sta
 \end{align}
 increases the probability of obtaining $\ket{x_0}$ at the time of measurement in the computational basis and $R=\ceil{\pi\sqrt{N}/4}$ iterations guarantees a probability of success that is greater than $1-1/N$.
 
+
+
+In general, we may use Grover's search algorithm to find a solution when the number of solutions $M$ is greater than 1. While the algorithmic details change little, the number of required Grover iterations
+\begin{align}\label{eq:R}
+R = \ceil[\Bigg]{\frac{\pi}{4} \sqrt{\frac{N}{M}}}
+\end{align}
+ and the probability of success after those $R$ iterations \emph{do} change \citep{boyer1998tight}.  When $M$ is much smaller than $N$, the success rate is greater than $1-M/N$, and even for large $M$ the success rate is more than $1/2$. Lower-bounds are useful for establishing mathematical guarantees, but it is also helpful to understand the quality of algorithmic performance as a function of $M$ and $R$. Figure \ref{fig:grov} shows success curves as a function of the number of Grover iterations (or oracle calls) applied.  The search field contains $2^{14} \approx 16$k elements, and the number of solutions $M$ varies. Each curve represents an individual search task.  The algorithm requires more iterations for smaller numbers and fewer iterations for larger numbers of solutions.  The upper bound on error $M/N$ is only an upper bound: the final probability of success for, e.g., $M=256$ is 0.997 compared to the bound of 0.984.
+ 
   \begin{algorithm}[th!]
 	\caption{Quantum exponential searching algorithm \citep{boyer1998tight}}\label{alg:expoSearch}
 	\KwData{An oracle gate $\U_f$ taking $\ket{x}\ket{y}$ to $\ket{x}\ket{y\oplus f(x)}$ for a function $f(x):\{0,\dots,N-1\}\rightarrow \{0,1\}$ with unknown number of solutions; $n=\log_2(N)$.}
@@ -419,14 +430,6 @@ increases the probability of obtaining $\ket{x_0}$ at the time of measurement in
 	
 	\vspace{0.5em}
 \end{algorithm}
-
-In general, we may use Grover's search algorithm to find a solution when the number of solutions $M$ is greater than 1. While the algorithmic details change little, the number of required Grover iterations
-\begin{align}\label{eq:R}
-R = \ceil[\Bigg]{\frac{\pi}{4} \sqrt{\frac{N}{M}}}
-\end{align}
- and the probability of success after those $R$ iterations \emph{do} change \citep{boyer1998tight}.  When $M$ is much smaller than $N$, the success rate is greater than $1-M/N$, and even for large $M$ the success rate is more than $1/2$. Lower-bounds are useful for establishing mathematical guarantees, but it is also helpful to understand the quality of algorithmic performance as a function of $M$ and $R$. Figure \ref{fig:grov} shows success curves as a function of the number of Grover iterations (or oracle calls) applied.  The search field contains $2^{14} \approx 16$k elements, and the number of solutions $M$ varies. Each curve represents an individual search task.  The algorithm requires more iterations for smaller numbers and fewer iterations for larger numbers of solutions.  The upper bound on error $M/N$ is only an upper bound: the final probability of success for, e.g., $M=256$ is 0.997 compared to the bound of 0.984.
- 
-
  
  While Grover's algorithm delivers impressive speedups over classical search algorithms, it has a major weakness.
  Figure \ref{fig:grov} hides the fact that the probability of success for Grover's algorithm is \emph{not} monatonic in the number of iterations.  Running the algorithm for more than $R$ iterations can backfire.  For example, running the algorithm for $\sqrt{2N}$ iterations when $M=1$ results in a probability of success less than $0.095$ \citep{boyer1998tight}.  The non-monotinicity of Grover's algorithm becomes particularly problematic when we do not know the number of solutions $M$. Taking for example $N=2^{20}$, \citet{boyer1998tight} point out that 804 iterations provide an extremely high probability of success when $M=1$ but a one-in-a-million chance of success when $M=4$.  To solve this problem and develop an effective search algorithm when $M$ is unknown, those authors adopt the strategy of focusing on the expected number of iterations before success. In particular, they propose the quantum exponential search algorithm (Algorithm \ref{alg:expoSearch}).  When a solution exists, the algorithm returns a solution with expected total number of Grover iterations bounded above by $\frac{9}{2}\sqrt{N/M}$.  Still better, this upper bound reduces to $\frac{9}{4}\sqrt{N/M}$ for the special case $M\ll N$, and simulations presented in Figure \ref{fig:expo} show that even this bound is large.  Such results come in handy when deciding whether to halt the algorithm's progress if one believes it possible that no solutions exist.  Indeed, this turns out to be useful in the context of quantum minimization.
@@ -635,6 +638,8 @@ f(p)= -\big(z_{p}+ \log\pi(\ttheta_{p}) \big) \quad \mbox{over} \quad p=0,1,\dot
 \end{align*} 
 which combines the numerators of Equation \eqref{eq:probs}, the Gumbel-max trick and a trivial negation.  As discussed in Section \ref{sec:qmin}, the sub-routine requires only $\mathcal{O}(\sqrt{P})$ oracle evaluations and, therefore, only $\mathcal{O}(\sqrt{P})$ evaluations of the target density $\pi(\cdot)$ using a quantum circuit.  In theory, a quantum computer can perform the same computations as a classical computer, but the efficiency of the target evaluations would depend on a number of factors related to the structure of the density itself, the availability of fast quantum random access memory \citep{giovannetti2008quantum} and the ability of large numbers of quantum gates to act in concert with negligible noise \citep{kielpinski2002architecture,erhard2019characterizing}.
 
+
+
 In general MCMC, one often calibrates the scaling of a proposal kernel to balance between exploring the target's domain and remaining within high-density regions.  Optimal scaling strategies may lead to a large number of rejected proposals \citep{roberts2001optimal}.  Indeed, \citet{holbrook2021generating} shows that parallel MCMC algorithms are no exception. When using the Gumbel-max trick to sample from proposals, this means that the current state is often quite near optimality, representing a warm-start.  Figure \ref{fig:mcmcIterations} shows how this warm-starting effects the number of oracle calls (and hence target evaluations) within the quantum minimization sub-routine over the course of an MCMC trajectory.  We target multi-dimensional standard normal distributions of differing dimensions using the vector $(100,\dots,100)$ as starting position. We fix the number of Gaussian proposals to be 2,000 and use standard adaptation procedures to target a 50\% acceptance rate while guaranteeing convergence \citep{rosenthal2011optimal}. Across iterations, QPMCMC requires relatively few oracle calls compared to the 2,000 target evaluations of parallel MCMC. We also witness the expected drop in the number of oracle evaluations as the chain approaches the target's high-density region. Remarkably, the algorithm succeeds in sampling from the true discrete distribution in 99.5\% of the MCMC iterations. An independent simulation obtains similar results, requiring roughly 7\% of the usual number of target evaluations. Figure \ref{fig:qq} shows a quantile-quantile plot for all 100 dimensions of a multi-dimensional standard normal distribution. We see no appreciable impact from the rare failure of the quantum minimization sub-routine.
 
 %\begin{table}[ht]\centering
@@ -649,9 +654,32 @@ In general MCMC, one often calibrates the scaling of a proposal kernel to balanc
 %		  \bottomrule\end{tabular}
 %\end{table}
 
+\sloppy
+Finally, we compare convergence speed for QPMCMC using 1,000, 5,000 and 10,000 proposals to target a massively multimodal distribution: a mixture of 1,000 2-dimensional, isotropic Gaussians with standard deviations equal to 1 and means equal to $10\times(\boldsymbol{0}, \boldsymbol{1} , \dots , \boldsymbol{999})$. This target is particularly challenging because the distance between modes is significantly larger than standard deviations. In 5 independent simulations, we run each algorithm until it achieves and effective sample size of 100.  Table \ref{tab:res} contains MCMC iterations and target evaluations required to achieve this effective sample size as well as relative speedups over sequential implementations and relative improvements over the 1,000 proposal sampler.
+
+\let\oldtabular\tabular
+\let\endoldtabular\endtabular
+\renewenvironment{tabular}{\rowcolors{2}{white}{trevorblue!15}\oldtabular}{\endoldtabular}
+
+\newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
+\ra{1.2}
+\begin{table}[t!]
+	\centering
+	\resizebox{\textwidth}{!}{
+		\begin{tabular}{@{}lllll@{}}\toprule
+			Proposals & MCMC iterations  & Target evaluations & Speedup  & Efficiency gain  \\   \midrule
+			1,000 & 249,398 (200,998,  311,998) & 24,988,963 (20,149,132, 31,265,011) & 9.98  (9.98, 9.98) & 1  \\   
+			5,000 & 14,398 (12,998, 16,998) & 3,314,560 (2,989,418,  3,916,281) & 21.72  (21.70, 21.74) & 7.58  (6.25, 9.71) \\   
+			10,000 & 5,998  (4,998,  6,998) & 1,993,484  (1,662,592,  2,330,842) & 30  (29.96, 30.26) & 12.87  (8.64, 18.80) \\    \bottomrule
+		\end{tabular}
+	}
+	\caption{Racing to 100 effective samples for a target with 1,000 disjoint modes. `Speedup' is ratio between target evaluations required for sequential and quantum implementations. `Efficiency gain' is ratio between target evaluations required for 1,000 proposal and 5,000/10,000 proposal implementations. We report means (minima, maxima) across 5 independent runs.}\label{tab:res}
+\end{table}
+
+
 \subsection{Note on simulations}
 
-We use the \textsc{R} programming language \citep{rlang} for all simulations and the \textsc{ggplot2} package to generate all figures \citep{ggplot}.  All simulations rely on the fact that the Grover iterations of Equation \eqref{eq:grov} manipulate the probability amplitudes in a deterministic manner. For example, the following \textsc{R} code specifies $N$ uniform probability amplitudes (\verb|sqrtProbs|), performs $I$ Grover iterations and measures a single state according to the resulting probabilities.
+We use \textsc{R} \citep{rlang}, \textsc{Python} \citep{vanrossum1995python} and \textsc{TensorFlow} \citep{abadi2016tensorflow}  in our simulations and the \textsc{ggplot2} package to generate all figures \citep{ggplot}.  All simulations rely on the fact that the Grover iterations of Equation \eqref{eq:grov} manipulate the probability amplitudes in a deterministic manner. For example, the following \textsc{R} code specifies $N$ uniform probability amplitudes (\verb|sqrtProbs|), performs $I$ Grover iterations and measures a single state according to the resulting probabilities.
 \begin{minted}{R}
 sqrtProbs <- rep(1/sqrt(N),N); i <- 1
 while (i <= I) {
@@ -668,7 +696,7 @@ Of course, simulating these iterations on a classical computer, requires precomp
 
 We have shown how parallel MCMC may enjoy quadratic speedups by combining quantum minimization with the Gumbel-max trick.  Within a QPMCMC iteration, the current state represents a warm-start for the sampling-turned-optimization problem, leading to increased efficiencies for the quantum minimization algorithm.  This work leads to two immediate questions.  First, more recent quantum minimization algorithms exist \citep{baritompa2005grover,farhi2014quantum}.  Would these confer additional speedups for quantum parallel MCMC and benefit from warm-starting in a similar manner? Second, there are other models and algorithms in statistics, machine learning and statistical mechanics that require sampling from potentially costly discrete distributions.  Can one adapt  the proposed strategies to these?  Large-scale, practical quantum computing is still a long way off, but quantum algorithms are ripe for mainstream computational statistics.
 
-\bibliographystyle{sysbio}
+\bibliographystyle{chicago}
 \bibliography{refs}
 
 \appendix
