about to start short revision

--- a/main.tex
+++ b/main.tex
@@ -315,7 +315,7 @@ A_{L1}\B & \cdots & A_{LM}  \B
 \end{align} 
 In statistics, the Kronecker product features in the definition of a matrix normal distribution and is sometimes helpful when specifying the kernel function of a multivariate Gaussian process \citep{werner2008estimation}. Here, the product is equivalent to the parallel action of individual quantum gates on individual qubits.  Simple application of Formula \eqref{eq:kron} shows that
 \begin{align}\label{eq:twoqubits}
-\H \otimes \H = \frac{1}{2} \left[\begin{array}{rrrr}
+\H^{\otimes 2} =\H \otimes \H = \frac{1}{2} \left[\begin{array}{rrrr}
 1 & 1 & 1 & 1 \\
 1 &  -1& 1 & -1 \\
 1 & 1 & -1 & -1 \\
